- Charging up the beams while Time Freeze is active no longer causes a massive amount of frozen trails.
- Put DoomEd numbers on all relevant actors, as per mapper request.
- After Boost Balling in mid-air, it is no longer possible to boost ball again until you have hit the ground.
- The Power Bomb's damage arc has been reversed--instead of dealing most of its damage in the center and weakening as it spreads out, it deals most of its damage the farther out it spreads. Due to the sheer amount of actors clustered up in the center, this is barely a noticable damage nerf for the Power Bomb. All it means is that one-shotting Cybers is a bit more difficult, and that enemies two feet out no longer get tickled.
- Rephrased a few lines in the difficulty settings for more clarification.
- By modder request, the HUD is now based upon whether or not you have PowerBeamAcquired in your inventory.
- The Speed Booster script no longer overflows with copious respawning.
- Dying now properly lowers your arm cannon on death.
- The Missiles' rate of fire has been shortened by six tics.
- The Speed Booster now replaces the Partial Invisibility sphere rather than the Radsuit.
- An optional Metroid-style system has been implemented--on picking up a major item, the world freezes, a banner pops up, and the fanfare plays. For those who want nothing to do with this, hit the Use button to break out, or type 'metroid_cl_nometroidpickups 1' in the console.
- Picking up the Space Jump will give the Morph Ball the ability to jump while morphed. This does not work for metroid_spacejump 1.
- The Ice Combo now checks for ten missiles instead of five.
- The Doom Cannon now has its Charge Combo.
- The Ice Beam's blast radius in co-op is expanded, allowing the player to catch more enemies with one shot. The Ice Beam's blast radius in PvP is ever-so-slightly expanded.
- All Charged beams aside from Ice have had their damage dramatically increased in co-op, to make charging up more viable.