@@ -269,7 +269,7 @@ ACTOR "Doom Cannon" : Weapon
         TNT1 A 0 A_Light0
         TNT1 A 0 A_ZoomFactor(1.00,ZOOM_INSTANT)
         DCAN E 1 A_WeaponReady(WRF_NOSECONDARY|WRF_NOPRIMARY|WRF_NOSWITCH)
-        DCAN EEFFFEEGGHHAA 1 A_WeaponReady(WRF_NOSECONDARY|WRF_NOPRIMARY|WRF_NOSWITCH)
+        DCAN EEFFFEEGGHH 1 A_WeaponReady(WRF_NOSECONDARY|WRF_NOPRIMARY|WRF_NOSWITCH)
         DCAN A 2 A_WeaponReady(WRF_NOSECONDARY|WRF_NOSWITCH)
         Goto Ready
     AltFireChilled:
