@@ -233,7 +233,7 @@ ACTOR "Long Beam" : Weapon
         TNT1 A 0 A_Light0
         TNT1 A 0 A_ZoomFactor(1.00,ZOOM_INSTANT)
         LBEM E 1 A_WeaponReady(WRF_NOSECONDARY|WRF_NOPRIMARY|WRF_NOSWITCH)
-        LBEM EEFFFEEGGHHAA 1 A_WeaponReady(WRF_NOSECONDARY|WRF_NOPRIMARY|WRF_NOSWITCH)
+        LBEM EEFFFEEGGHH 1 A_WeaponReady(WRF_NOSECONDARY|WRF_NOPRIMARY|WRF_NOSWITCH)
         LBEM A 2 A_WeaponReady(WRF_NOSECONDARY|WRF_NOSWITCH)
         Goto Ready
     AltFireChilled:
