@@ -228,7 +228,7 @@ ACTOR "Power Beam" : Weapon
         TNT1 A 0 A_Light0
         TNT1 A 0 A_ZoomFactor(1.00,ZOOM_INSTANT)
         PBEM E 1 A_WeaponReady(WRF_NOSECONDARY|WRF_NOPRIMARY|WRF_NOSWITCH)
-        PBEM EEFFFEEGGHHAA 1 A_WeaponReady(WRF_NOSECONDARY|WRF_NOPRIMARY|WRF_NOSWITCH)
+        PBEM EEFFFEEGGHH 1 A_WeaponReady(WRF_NOSECONDARY|WRF_NOPRIMARY|WRF_NOSWITCH)
         PBEM A 2 A_WeaponReady(WRF_NOSECONDARY|WRF_NOSWITCH)
         Goto Ready
     AltFireChilled:
