@@ -209,6 +209,7 @@ ACTOR "Bombs" : Weapon
         TNT1 A 0 A_FireCustomMissile("MorphBallBomb",0,0,0,0,0,0)
     FireFinish:
         TNT1 A 0 A_PlayWeaponSound("morphball/bombdrop")
+        TNT1 A 0 ACS_ExecuteAlways(594,0,32,0,0)
         TNT1 A 3 A_TakeInventory("BombCount",1)
         Goto Ready
     FireCharged:
@@ -299,7 +300,7 @@ ACTOR MorphBallBomb
         MBOM ABCDABCD 4
         TNT1 A 0 A_PlaySound("morphball/bombboom")
         TNT1 A 0 A_Explode(96,128,0)
-        TNT1 A 0 A_GiveToTarget("BombCount",1)
+        //TNT1 A 0 A_GiveToTarget("BombCount",1)
         TNT1 A 0 A_SpawnItemEx("BombExplode",0,0,0,0,0,0,0,160)
         TNT1 AA 0 A_SpawnItemEx("BombRingExp1",0,0,0,0,0,0,0,160)
         TNT1 A 0 A_SpawnItemEx("DummyExplode",0,0,-32,0,0,0,0,32)
@@ -315,7 +316,7 @@ ACTOR MorphBallBombDM : MorphBallBomb
         MBOM ABCDABCDAB 4
         TNT1 A 0 A_PlaySound("morphball/bombboom")
         TNT1 A 0 A_Explode(96,96,0)
-        TNT1 A 0 A_GiveToTarget("BombCount",1)
+        //TNT1 A 0 A_GiveToTarget("BombCount",1)
         TNT1 A 0 A_SpawnItemEx("BombExplode",0,0,0,0,0,0,0,160)
         TNT1 AA 0 A_SpawnItemEx("BombRingExp1",0,0,0,0,0,0,0,160)
         TNT1 A 0 A_SpawnItemEx("DummyExplode",0,0,-32,0,0,0,0,32)
